--- a/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -64,25 +64,31 @@ LastExecutedLaunchName=NICHOLAS-PC
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowPosition=(X=3840,Y=0)
 
 [MRU]
 MRUItem0=/Game/Maps/TestLevel
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [EditorStartup]
 LastLevel=/Game/Maps/TestLevel
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Materials/DarkGrey.DarkGrey
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/DarkGrey
-MRUItem1=/Game/Maps/TestLevel
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/Healthbar
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem2=/Game/Maps/TestLevel
+MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem4=/Game/Materials/DarkGrey
+MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [DetailCategories]
 ThirdPersonCharacter_C.Default=True
@@ -650,6 +656,29 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+FirstPersonHUD_C.Tick=True
+FirstPersonHUD_C.Default=True
+FirstPersonHUD_C.HUD=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1388,6 +1417,22 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.12.05-23.47.50
 BlueprintGraph.LastCompileMethod=Unknown
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.Num 1,InputSettings.Bindings.ActionMappings.Num 2,InputSettings.Bindings.ActionMappings.Num 3,InputSettings.Bindings.ActionMappings.Num 4,InputSettings.Bindings.ActionMappings.Num 5,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.Num 1,InputSettings.Bindings.ActionMappings.Num 2,InputSettings.Bindings.ActionMappings.Num 3,InputSettings.Bindings.ActionMappings.Num 4,InputSettings.Bindings.ActionMappings.Num 5,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -1449,9 +1494,10 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.Num 1,InputSettings.Bindings.ActionMappings.Num 2,InputSettings.Bindings.ActionMappings.Num 3,InputSettings.Bindings.ActionMappings.Num 4,InputSettings.Bindings.ActionMappings.Num 5,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -1464,7 +1510,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[17]\" "
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
@@ -1482,5 +1528,22 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
