--- a/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,18 +67,16 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowPosition=(X=3840,Y=0)
 
 [MRU]
-MRUItem0=/Game/Maps/TestLevel
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/Maps/TestLevel
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [EditorStartup]
-LastLevel=/Game/Maps/TestLevel
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/Materials/DarkGrey.DarkGrey
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Healthbar.Healthbar
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Blueprints/Healthbar
@@ -679,6 +677,29 @@ ObjectProperty.Variable=True
 ObjectProperty.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+DocumentationActor.Help Data=True
+DocumentationActor.Replication=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1495,9 +1516,9 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -1510,7 +1531,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Render Transform.RenderTransform\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[17]\" "
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
@@ -1528,11 +1549,12 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
