--- a/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
@@ -785,13 +785,13 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=5582.000 Y=179.000
-WindowSize=X=1277.000 Y=717.000
+ScreenPosition=X=2322.667 Y=240.667
+WindowSize=X=1280.667 Y=720.667
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1452,6 +1452,8 @@ Voice.TimeStamp=2018.12.05-23.49.44
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.12.05-23.48.49
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.12.05-23.48.16
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
